--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,10 @@
     color: inherit;
     line-height: 17px;
     color: #48494D;
+    transition: all .2s ease;
+    }
+    .default-input_wrapper .label-default.invalid {
+        border-color: #D90008
     }
     .default-input_wrapper .label-default-img {
     display: inline-block;
@@ -331,11 +335,6 @@
     }
     .big-link {
         font-size: 16px;
-        position: relative;
-        left: 50%;
-        -webkit-transform: translateX(-50%);
-            -ms-transform: translateX(-50%);
-                transform: translateX(-50%);
     }
     section.grey {
         margin: 25px 0;
@@ -355,13 +354,13 @@
             align-items: center;
 }
 .top-wrapper-description {
-    width: 35%;
+    width: 36%;
     z-index: 2;
     padding-left: 60px;
     position: relative;
 }
 .top-wrapper-img {
-    width: 65%;
+    width: 64%;
     padding-left: 100px;
     z-index: 1;
     height: 25vw;
@@ -534,18 +533,23 @@
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    position: relative;
 }
 .offer-img_wrapper {
-    width: 49%;
-    height: 20vw;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 52%;
+    height: 100%;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 
 .offer-description_wrapper {
-    width: 51%;
+    width: 48%;
     padding-left: 60px;
+    margin-left: auto;
 }
 .offer-description_wrapper .heading {
     padding-bottom: 15px;
@@ -559,17 +563,25 @@
 .offer-list li + li {
     margin-top: 5px;
 }
-.offer-list .link {
-    display: inline;
+.offer-list + .link-wrapper {
+    padding-top: 20px;
 }
-.offer-list + .link {
-    margin-top: 30px;
+.offer-description_wrapper .link-wrapper {
+    width: 100%;
+}
+.offer-description_wrapper .link-wrapper >.link {
+    display: inline;
+    line-height: 27px;
+}
+.offer-description_wrapper .link-wrapper +.link-wrapper{
+    padding-top: 15px;
 }
 
 @media screen and (max-width: 1199px) {
     .offer-img_wrapper {
         width: 100%;
         height: 50vw;
+        position: relative;
     }
     .offer-description_wrapper {
         width: 100%;
@@ -577,7 +589,11 @@
         padding-top: 30px;
     }
 }
-
+@media screen and (max-width: 767px) {
+    .offer-description_wrapper .link-wrapper {
+        text-align: center;
+    }
+}
 
 /* 04 Start Steps Form Block CSS */
  .form-steps_wrapper {
